--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,11 @@ repositories {
 
 dependencies {
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.22'
 
     testRuntime group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.39.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+// TODO: Add anymore relevant tasks where needed
