--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -14,4 +14,13 @@
         <url-pattern>/Initializer</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>servlet.controller.LoginController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+
 </web-app>
