--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,32 @@
 apply plugin: 'java'
+apply plugin: 'war'
 
 sourceCompatibility = 1.7
 version = '1.0'
+
+configurations {
+    moreLibs
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.22'
 
     testRuntime group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.39.0'
-
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+war {
+    from 'src/rootContent' // adds a file-set to the root of the archive
+    webInf { from 'src/additionalWebInf' } // adds a file-set to the WEB-INF dir.
+    classpath fileTree('additionalLibs') // adds a file-set to the WEB-INF/lib dir.
+    classpath configurations.moreLibs // adds a configuration to the WEB-INF/lib dir.
+    webXml = file('src/main/webapp/WEB-INF/webapp.xml') // copies a file to WEB-INF/webapp.xml
 }
 
 // TODO: Add anymore relevant tasks where needed
