--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,16 @@ repositories {
 }
 
 dependencies {
+    // Servlets
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.22'
+    // SQL
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.29'
 
-    testRuntime group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.39.0'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    // Selenium
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.28.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-server', version: '2.28.0'
+    compile group: 'junit', name: 'junit', version: '4.11'
 }
 
 war {
@@ -28,5 +32,3 @@ war {
     classpath configurations.moreLibs // adds a configuration to the WEB-INF/lib dir.
     webXml = file('src/main/webapp/WEB-INF/webapp.xml') // copies a file to WEB-INF/webapp.xml
 }
-
-// TODO: Add anymore relevant tasks where needed
